<resources>
    <string name="app_name">號碼登記表</string>
    <string name="title">繳交事項</string>
    <string name="first_one">第一號</string>
    <string name="last_one">最後一號</string>
    <string name="to">到</string>
    <string name="member_number">成員號碼</string>
    <string name="build">建立</string>
    <string name="cancel">取消</string>
    <string name="number_test">00</string>
    <string name="paid">已繳交\n0</string>
    <string name="unpaid">未繳交\n10</string>
    <string name="save">儲存</string>
    <string name="date">2020/05/10</string>
    <string name="select_all">全部選擇</string>
    <string name="cancel_all">全部取消</string>
    <string name="tip">未建立表格\n點擊右下角按鈕建立登記表</string>
    <string name="sort">排序方式</string>
    <string name="delete_all">刪除所有表格</string>
    <string name="search">搜尋</string>
    <string name="id_app">ca-app-pub-3142349516815132~8409143027</string>
    <string name="id_ad_main_page">ca-app-pub-3142349516815132/6792615504</string>
    <string name="id_ad_add_page">ca-app-pub-3142349516815132/8764366243</string>
    <string name="id_ad_edit_page">ca-app-pub-3142349516815132/3208593710</string>
</resources>
